--- a/frontend/src/components/shared/popUps/documentModal/documentModal.scss
+++ b/frontend/src/components/shared/popUps/documentModal/documentModal.scss
@@ -107,7 +107,7 @@
   .MuiDialogActions-root {
     justify-content: center;
     margin-bottom: 16px;
-    padding: 8px 9px 8px 12px;
+    padding: 8px 9px 8px 8px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
@@ -148,5 +148,14 @@
   input {
     border: 1px solid #d4d6db;
     border-radius: 8px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .document-modal {
+    .MuiDialogActions-root {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
   }
 }
