--- a/frontend/src/components/shared/popUps/userModal/userModal.scss
+++ b/frontend/src/components/shared/popUps/userModal/userModal.scss
@@ -146,6 +146,7 @@
   }
   .MuiDialogActions-root {
     margin-bottom: 12px;
+    margin-right: 14px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
@@ -183,6 +184,9 @@
 
 @media only screen and (max-width: 480px) {
   .users-modal {
+    .MuiDialogActions-root {
+      margin-right: 0px;
+    }
     .MuiDialog-paper {
       width: 100%;
       margin: 5px;
